// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-ticket-rule-general-form Renders \`declare-ticket-rule-general-form\` with empty form 1`] = `
<div
  class="layout column"
>
  <c-enabled-field-stub
    value="true"
    with-background=""
  />
  <c-enabled-field-stub
    class="pa-2"
    hide-details=""
    label="Emit trigger"
  />
  <div
    class="layout mb-2"
  >
    <div
      class="flex mr-3 xs8"
    >
      <c-name-field-stub
        autofocus=""
        required=""
        value=""
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-name-field-stub
        label="System name"
        name="system_name"
        value=""
      />
    </div>
  </div>
  <declare-ticket-rule-webhooks-field-stub
    name="webhooks"
    templatevars="[object Object]"
    webhooks=""
  />
</div>
`;

exports[`declare-ticket-rule-general-form Renders \`declare-ticket-rule-general-form\` with filled form 1`] = `
<div
  class="layout column"
>
  <c-enabled-field-stub
    value="true"
    with-background=""
  />
  <c-enabled-field-stub
    class="pa-2"
    hide-details=""
    label="Emit trigger"
  />
  <div
    class="layout mb-2"
  >
    <div
      class="flex mr-3 xs8"
    >
      <c-name-field-stub
        autofocus=""
        required=""
        value="name"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-name-field-stub
        label="System name"
        name="system_name"
        value="system-name"
      />
    </div>
  </div>
  <declare-ticket-rule-webhooks-field-stub
    name="webhooks"
    templatevars="[object Object]"
    webhooks="[object Object]"
  />
</div>
`;
